# clawsome

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
docs/: product-review.md
reporter/: fixture.js
skill/: SKILL.md
src/: app.py  server.js
src/api/: auth.py  contexts.js  contexts.py  errors.py
src/browser/: contexts.js  contexts.py  create-profile.js  create_profile.py  manager.js  manager.py
src/dashboard/: partials.js  routes.js  routes.py  sse.js  sse.py  ws.py
src/db/: __init__.py  index.js  schema.sql
src/public/: live.js  style.css
src/templates/: context.html  history.html  layout.html  logs.html  summary.html
src/templates/partials/: context_card.html
src/views/: context.eta  layout.eta  logs.eta  summary.eta
src/views/partials/: context-card.eta
