[project]
name = "clawsome"
version = "0.1.0"
description = "Drive headless Chromium over a REST API and watch it live in a dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "playwright>=1.58.0",
    "sse-starlette>=3.3.2",
    "uvicorn[standard]>=0.41.0",
]
